Minor quality improvements